 * Removed deprecated FittingTest::Kolmogorov, FittingTest::BestModelKolmogorov (DistributionFactory argument only)
 * Moved Sample::computeStandardDeviationPerComponent, to computeStandardDeviation
 * Deprecated KarhunenLoeveResult::getEigenValues, use getEigenvalues
 * Removed StationaryCovarianceModel
 * CovarianceModel.computeAsScalar allows scalars

=== Documentation ===

=== Python module ===
 * Serialize Python wrapper objects using dill (PythonDistribution, PythonFunction ...)

=== Miscellaneous ===

=== Bug fixes ===
 * #1431 (The figure for LHSExperiment is not accurate)
 * #1459 (There is no example which shows how to set a column of a Sample)
 * #1497 (There is no example to create a multivariate Normal distribution)
 * #1506 (The Brent class has no example)
 * #1650 (There is no example of a parametric StationaryFunctionalCovarianceModel)
 * #1661 (XMLH5StorageManager does not store IndicesCollection into HDF5 files)
 * #1662 (Operator() of a CovarianceModel with multidimensional output should yield object of type SquareMatrix)
 * #1680 (QuadraticBasisFactory multiplies cross products by 2)
 * #1710 (Misleading y labels in VisualTest.DrawPairsMarginals())
 * #1713 (The doc of the ResourceMap does not match the content of the ResourceMap)
 * #1714 (The log-PDF of the Pareto is wrong)
 * #1721 (The `draw` method of `SobolSimulationAlgorithm` does not reuse the descriptions)
 * #1729 (LinearModelAnalysis sometimes fail)
 * #1731 (The Extreme value example may be improved)
 * #1737 (Low rank tensor doc issues)
 * #1742 (The example which shows how to set the figure size is wrong.)
 * #1752 (Error while estimating the reduced log-likelihood when using a StationaryFunctionalCovarianceModel)
 * #1759 (Kriging model with StationaryFunctionalCovarianceModel might provide bad results)
 * #1768 (Bug in ExponentiallyDampedCosineModel & SphericalModel)
 * #1771 (GridLayout hides the titles in the graph)
 * #1772 (MinimumVolumeClassifier cannot draw 1D samples)