@@ -5,18 +5,18 @@ Kolmogorov-Smirnov : get the statistics distribution
 # %% 
 
 # %%
-# In this example, we draw the Kolmogorov-Smirnov distribution for a sample size 10. We want to test the hypothesis that this sample has the `Uniform(0,1)` distribution. The K.S. distribution is first plot in the case where the parameters of the Uniform distribution are known. Then we plot the distribution when the parameters of the Uniform distribution are estimated from the sample.
+# In this example, we draw the Kolmogorov-Smirnov distribution for a sample size 10. 
+# We want to test the hypothesis that this sample has the `Uniform(0, 1)` 
+# distribution. 
+# The K.S. distribution is first plotted in the case where the 
+# parameters of the uniform distribution are known.
+# Then we plot the distribution when the parameters of the uniform
+# distribution are estimated from the sample.
 #
 # *Reference* : Hovhannes Keutelian, "The Kolmogorov-Smirnov test when parameters are estimated from data", 30 April 1991, Fermilab
 #
-# There is a sign error in the paper; the equation:
-# ```
-# D[i]=max(abs(S+step),D[i]) 
-# ```
-# must be replaced with 
-# ```
-# D[i]=max(abs(S-step),D[i]) 
-# ```
+# Note: There is a sign error in the paper; the equation:
+# `D[i]=max(abs(S+step),D[i])` must be replaced with `D[i]=max(abs(S-step),D[i])`.
 
 # %%
 import openturns as ot
