@@ -24,6 +24,7 @@
  * CovarianceModel.computeAsScalar allows scalars
 
 === Documentation ===
+ * Fixed example and plot of Kolmogorov statistics.
 
 === Python module ===
  * Serialize Python wrapper objects using dill (PythonDistribution, PythonFunction ...)
